<resources>
    <string name="app_title">Proyecto de Algorítmica 2</string>
    <string name="app_subtitle">Escoge tu Nivel de Dificultad</string>
    <string name="btn_MCM">Nivel MCM</string>
    <string name="btn_MCD">Nivel MCD</string>
    <string name="validate">✓</string>
    <string name="cancel">X</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="app_name">Proyecto Algorítmica 2</string>
    <string name="btn_Primos">Números Primos</string>
    <string name="false_text">Falso</string>
    <string name="true_text">Verdadero</string>
    <string name="statement_text">Identifica los números primos en el nivel</string>
    <string name="congratulations">¡FELICIDADES!</string>
    <string name="win_message">Has completado el nivel</string>
    <string name="new_game">Nuevo Juego</string>
    <string name="game_over">GAME OVER</string>
    <string name="lose_message">Inténtalo de nuevo</string>
    <string name="try_again">Intentar de Nuevo</string>
    <string name="menu">Menú</string>
    <string name="input_hint">Escribe el resultado</string>
</resources>