<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space_bg"
    android:padding="16dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_for_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="388dp" />

    <FrameLayout
        android:id="@+id/meteoritoContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/controlStation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/controlStation"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/penguin1"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@id/registerBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:translationY="12dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registerBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_card"
        android:padding="14dp"
        android:elevation="12dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_top_for_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/inputDisplay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/_0"
            android:textColor="#3F51B5"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <GridLayout
            android:id="@+id/keypad"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:columnCount="3"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:useDefaultMargins="true"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/inputDisplay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/actionButtons">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:background="@drawable/key_circle"
                android:stateListAnimator="@null"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key8"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:background="@drawable/key_circle"
                android:stateListAnimator="@null"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key9"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:background="@drawable/key_circle"
                android:stateListAnimator="@null"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:background="@drawable/key_circle"
                android:stateListAnimator="@null"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:background="@drawable/key_circle"
                android:stateListAnimator="@null"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:background="@drawable/key_circle"
                android:stateListAnimator="@null"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:background="@drawable/key_circle"
                android:stateListAnimator="@null"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:background="@drawable/key_circle"
                android:stateListAnimator="@null"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:background="@drawable/key_circle"
                android:stateListAnimator="@null"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck" />
        </GridLayout>

        <LinearLayout
            android:id="@+id/actionButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnValidate"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cyan"
                android:text="@string/validate"
                android:textColor="#607D8B"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                tools:ignore="VisualLintButtonSize" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:backgroundTint="@color/pink"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
