<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_bg"
    android:padding="20dp"
    tools:context=".WinningScreen">

    <androidx.cardview.widget.CardView
        android:id="@+id/winningCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:elevation="16dp"
        app:cardBackgroundColor="@color/accent_gold_light"
        app:cardCornerRadius="16dp"
        app:cardElevation="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="400dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            app:cardBackgroundColor="@color/accent_light_cream"
            app:cardCornerRadius="13dp"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="32dp">

                <TextView
                    android:id="@+id/tvCongratulations"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/congratulations"
                    android:textColor="@color/accent_gold_deep"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/roman"
                    android:letterSpacing="0.08"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tvWinMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/win_message"
                    android:textColor="@color/tone_deep_green"
                    android:textSize="16sp"
                    android:fontFamily="@font/roman"
                    app:layout_constraintTop_toBottomOf="@id/tvCongratulations"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnNewGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/accent_gold_deep"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp"
                    app:layout_constraintTop_toBottomOf="@id/tvWinMessage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="28dp"
                        android:paddingVertical="12dp"
                        android:text="@string/new_game"
                        android:textColor="@color/accent_light_cream"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/roman" />
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>